# employe-dashboard

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
scripts/: generate_credentials.py
src/: auth.py  data.py  ui.py
