[project]
name = "employe-dashboard-buyukkarci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "streamlit>=1.55.0",
    "streamlit-authenticator>=0.4.2",
    "toml>=0.10.2",
    "unidecode>=1.4.0",
]
